<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/velocity_placeholder"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/displacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/velocity"
        android:layout_alignParentLeft="true"
        android:text="@string/displacement_placeholder"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/rep_data_title"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/displacement"
        android:layout_alignParentLeft="true"
        android:text="@string/debug_data_title"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/repetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:gravity="center"
        android:text="@string/rep_data_placeholder"
        android:textSize="90sp" />

</RelativeLayout>